<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Auto Time Helper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="drawer_open">Menu Opened</string>
    <string name="drawer_close">Menu Closed</string>
    <string name="menu_template">My page</string>
    <string name="manual_activity">Manual Activity</string>
    <string name="settings">Settings</string>
    <string name="info_result">Result</string>
    <string name="map">Map</string>
    <string name="stop">STOP</string>
    <string name="call">CALL</string>
    <string name="work">WORK</string>
    <string name="walk">WALK</string>
    <string name="rest">REST</string>

</resources>