<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="1dp"
    android:background="@color/backGroundGrey"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:src="@drawable/ic_work_running_grey" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:padding="8dp" >

        <TextView
            android:id="@+id/title"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_weight="0.08"
            android:gravity="center_vertical|center_horizontal"
            android:text=""
            android:textColor="#fcfcfc"
            android:textSize="30sp"
            android:textStyle="normal" />
    </LinearLayout>

    <AnalogClock
        android:id="@+id/analogClock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <TableLayout
        android:id="@+id/contentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:orientation="horizontal"
        android:padding="8dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp" >

            <ToggleButton
                android:id="@+id/butCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_call"
               
                android:textOff="@string/call"
                android:textOn="@string/stop" />

            <ToggleButton
                android:id="@+id/butWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_work"
                
                android:textOff="@string/work"
                android:textOn="@string/stop"
                />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp" >

            <ToggleButton
                android:id="@+id/butWalk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_walk"
               
                android:textOff="@string/walk"
                android:textOn="@string/stop" />

            <ToggleButton
                android:id="@+id/butRest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_rest"
               
                android:textOff="@string/rest"
                android:textOn="@string/stop" />
        </TableRow>
    </TableLayout>

</LinearLayout>